tests/fixtures/errors/invalid_import_escape_path.puml
@startuml
!import ../outside
Alice -> Bob: unreachable
@enduml
